5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1807_2570.log
== TEST (2019-06-11 16:21:13) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
print(media)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:25:18) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x* abs(i - media)
x=x**i
print(round(x,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:25:33) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x* abs(i - media)
x=x**i
print(round(x,3))

	



-- EXECUTION TIME:
0.993252
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
0.0
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:26:24) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x* abs(i - media)
x=x**i
print(round(x,3))

	



-- EXECUTION TIME:
1.05007
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
0.0
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:27:58) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x* abs(num- media)
x=x**i
print(round(x,3))

	



-- EXECUTION TIME:
1.00477
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(x,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:28:13) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x* abs(num-media)
x=x**i
print(round(x,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:00) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x* abs(num-media)
	x=x**i
print(round(x,3))

	



-- EXECUTION TIME:
0.986165
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in power
  x=x**i
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: divide by zero encountered in power
  x=x**i
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(x,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:29:33) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
	x=x**i
print(round(x,3))

	



-- EXECUTION TIME:
0.825803
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in power
  x=x**i
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: divide by zero encountered in power
  x=x**i
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(x,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:29:53) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
	x=x**i
print(round(x,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:30:44) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
x=x**i
print(round(x,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:30:51) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
x=x**i
print(round(x,3))

	



-- EXECUTION TIME:
1.30125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(x,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:35:05) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
x=x**(1/size(num))
print(round(x,3))

	



-- EXECUTION TIME:
0.941124
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(x,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:35:09) 
-- CODE:
from math import *
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
x=x**(1/size(num))
print(round(x,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:36:35) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
x=1
for i in num:
	x=x*(abs(num-media))
x=x**(1/size(num))
print(round(x,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:37:31) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:38:01) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:38:32) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.0067
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:39:18) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.71178
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:39:19) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
2.64388
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:39:19) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
3.61378
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:39:25) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:40:34) 
-- CODE:
fro
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.23944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 1, in <module>
    fro
NameError: name 'fro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:40:34) 
-- CODE:
fro
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.74182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 1, in <module>
    fro
NameError: name 'fro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:42:13) 
-- CODE:
fro
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.56736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 1, in <module>
    fro
NameError: name 'fro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:42:14) 
-- CODE:
fro
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.33681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 1, in <module>
    fro
NameError: name 'fro' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:42:16) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.46834
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:42:20) 
-- CODE:

from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.11639
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:42:25) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:42:30) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:42:31) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.09733
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 8, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:33) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- EXECUTION TIME:
0.690579
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:43:35) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- ERROR:
File "XXXX", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:43) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- EXECUTION TIME:
1.15166
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:44) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- EXECUTION TIME:
2.36613
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:44) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- EXECUTION TIME:
3.6076
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:44) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- EXECUTION TIME:
4.14242
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:44) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
valor=valor**(1/size(num))
	print(round(valor,3))

	



-- EXECUTION TIME:
4.6303
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    print(round(valor,3))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:43:50) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))
	valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
0.836474
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 8, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:44:11) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media)
					
valor=valor**(1/size(num))

print(round(valor,3))

	



-- ERROR:
File "XXXX", line 8
    valor=valor**(1/size(num))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:44:14) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))

	valor=valor**(1/size(num))

print(round(valor,3))

	



-- EXECUTION TIME:
1.6621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:44:14) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))

	valor=valor**(1/size(num))

print(round(valor,3))

	



-- EXECUTION TIME:
2.05113
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:44:15) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))

	valor=valor**(1/size(num))

print(round(valor,3))

	



-- EXECUTION TIME:
4.01066
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:44:15) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))

	valor=valor**(1/size(num))

print(round(valor,3))

	



-- EXECUTION TIME:
5.25868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:44:15) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1.0
for i in num:
	valor=valor*(abs(num-media))

	valor=valor**(1/size(num))

print(round(valor,3))

	



-- EXECUTION TIME:
6.82942
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:44:32) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor=valor*(abs(num-media)
					
valor=valor**(1/size(num))

print(round(valor,3))

	



-- EXECUTION TIME:
0.741609
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    valor=valor**(1/size(num))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:44:46) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))

media=sum(num)/size(num)
valor=1

for i in num:
	valor=valor*(abs(num-media)
				
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
File "XXXX", line 10
    valor=valor**(1/size(num))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:45:08) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))

media=sum(num)/size(num)
valor=1

for i in num:
	valor= valor*(abs(num-media))
				
valor=valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:47:54) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))

media=sum(num)/size(num)
valor=1

for i in num:
	valor= valor*(abs(num-media))
				
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.07658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 11, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:48:18) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor= valor*(abs(num-media))
valor=valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.18845
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 8, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:48:48) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor= valor*(abs(num-media))
valor=valor**(1/len(num))
print(round(valor,3))

	



-- EXECUTION TIME:
0.98414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 8, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:48:50) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor= valor*(abs(num-media))
valor=valor**(1/len(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:49:21) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor= valor*(abs(num-media))
valor=valor**(1/len(num))
print(round(valor,3))

	



-- EXECUTION TIME:
0.99237
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:49:42) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.01907
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:09) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.10814
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in multiply
  valor=valor*valor
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:09) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:09) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:09) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:09) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:10) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:10) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:19) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
2.01052
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in multiply
  valor=valor*valor
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:21) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
4.92485
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in multiply
  valor=valor*valor
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:21) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
7.66741
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:24) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
7.85403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:24) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
=valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
File "XXXX", line 8
    =valor = valor**(1/size(num))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:25) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
8.86098
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:27) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
6.41672
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:53:27) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
=valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
File "XXXX", line 8
    =valor = valor**(1/size(num))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:31) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
6.20671
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in multiply
  valor=valor*valor
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:31) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
5.02988
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in multiply
  valor=valor*valor
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:31) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
	valor=valor*valor
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
4.42163
-- ERROR:
/home/codebench/codes/1807/2570/main.py:8: RuntimeWarning: overflow encountered in multiply
  =2valor = valor**(1/size(num))
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 10, in <module>
    
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:31) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
=2valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
3.47256
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1807/2570/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:53:36) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.07275
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 16:54:01) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
0.957172
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 9, in <module>
    print(round(valor,3))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:57:38) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:58:21) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(num-media))
valor = valor**(1/size(num))
print(valor)

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:00:34) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(valor)

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:00:44) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(valor)

	



-- EXECUTION TIME:
0.984809
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.838851702076843
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757161916919124
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.21185027622176966
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:00:59) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.05022
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
Informe as notas: 0.212
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:01:18) 
-- CODE:
from numpy import *  

num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.29861
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:01:42) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
0.936135
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:01:52) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,4))

	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:01:52) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,4))

	



-- EXECUTION TIME:
1.03638
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.8389
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.7572
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.2119
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:02:02) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,4))

	



-- EXECUTION TIME:
1.20781
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.8389
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.7572
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.2119
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:02:10) 
-- CODE:
from numpy import *  
from math import *
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
0.901216
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
Informe as notas: 3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
Informe as notas: 0.212
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:03:10) 
-- CODE:
from numpy import *  

num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.08296
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
Informe as notas: 3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
Informe as notas: 0.212
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:03:16) 
-- CODE:
from numpy import *  
num = array(eval(input("Informe as notas: ")))
media=sum(num)/size(num)
valor=1
for i in num:
	valor = valor*(abs(i-media))
valor = valor**(1/size(num))
print(round(valor,3))

	



-- EXECUTION TIME:
1.12195
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
8.839
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
3.757
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.212
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:57:17) 
-- CODE:
from numpy import *  
v = array(eval(input("Informe as notas: ")))
cont=0

for elemento in v:
	if(elemento >=2000):
		cont = cont +1
	print(cont)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:57:38) 
-- CODE:
from numpy import *  
v = array(eval(input("Informe as notas: ")))
cont=0

for elemento in v:
	if(elemento >=2000):
		cont = cont +1
print(cont)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:58:05) 
-- CODE:
from numpy import *  
v = array(eval(input("Informe as notas: ")))
cont=0

for elemento in v:
	if(elemento >=2000):
		cont = cont +1
print(cont)
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *  
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
